# controllers/psicologia.comportamientoConsulta.go
@@ -138,7 +138,7 @@ func (c *ComportamientoConsultaController) GetAll() {
 func (c *ComportamientoConsultaController) Put() {
 	idStr := c.Ctx.Input.Param(":id")
 	id, _ := strconv.Atoi(idStr)
-	v := models.ComportamientoConsulta{IdComportamientoConsulta: id}
+	v := models.ComportamientoConsulta{Id: id}
 	if err := json.Unmarshal(c.Ctx.Input.RequestBody, &v); err == nil {
 		if err := models.UpdateComportamientoConsulta(&v); err == nil {
 			c.Data["json"] = "OK"
