# controllers/psicologia.diagnostico.go
@@ -138,7 +138,7 @@ func (c *DiagnosticoController) GetAll() {
 func (c *DiagnosticoController) Put() {
 	idStr := c.Ctx.Input.Param(":id")
 	id, _ := strconv.Atoi(idStr)
-	v := models.Diagnostico{IdDiagnostico: id}
+	v := models.Diagnostico{Id: id}
 	if err := json.Unmarshal(c.Ctx.Input.RequestBody, &v); err == nil {
 		if err := models.UpdateDiagnostico(&v); err == nil {
 			c.Data["json"] = "OK"
