# swagger/swagger.yml
@@ -709,29 +709,33 @@ definitions:
     title: Antecedente
     type: object
     properties:
-      Actual_somatico:
+      ActualSomatico:
         type: string
-      IdAntecedente:
+      HistoriaClinicaId:
         type: integer
         format: int64
-      IdHistoriaClinica:
+      Id:
         type: integer
         format: int64
-      IdTipoAntecedentePsicologico:
-        type: integer
-        format: int64
-      Pasado_somatico:
+      PasadoSomatico:
         type: string
+      TipoAntecedente:
+        $ref: '#/definitions/models.TipoAntecedente'
   models.ComportamientoConsulta:
     title: ComportamientoConsulta
     type: object
     properties:
       Afrontamiento:
         type: string
-      IdComportamientoConsulta:
+      Comportamiento:
+        type: string
+      HistoriaClinicaId:
         type: integer
         format: int64
-      IdHojaHistoria:
+      HojaHistoriaId:
+        type: integer
+        format: int64
+      Id:
         type: integer
         format: int64
       Problematica:
@@ -740,10 +744,13 @@ definitions:
     title: ComposicionFamiliar
     type: object
     properties:
-      IdComposicionFamiliar:
+      HistoriaClinicaId:
         type: integer
         format: int64
-      IdHojaHistoria:
+      HojaHistoriaId:
+        type: integer
+        format: int64
+      Id:
         type: integer
         format: int64
       Observaciones:
@@ -758,10 +765,13 @@ definitions:
         type: string
       Hipotesis:
         type: string
-      IdDiagnostico:
+      HistoriaClinicaId:
         type: integer
         format: int64
-      IdHojaHistoria:
+      HojaHistoriaId:
+        type: integer
+        format: int64
+      Id:
         type: integer
         format: int64
       Observaciones:
@@ -774,10 +784,13 @@ definitions:
         type: string
       Difusos:
         type: string
-      IdHojaHistoria:
+      HistoriaClinicaId:
         type: integer
         format: int64
-      IdLimite:
+      HojaHistoriaId:
+        type: integer
+        format: int64
+      Id:
         type: integer
         format: int64
       Rigidos:
@@ -796,7 +809,7 @@ definitions:
       FechaModificacion:
         type: string
         format: datetime
-      IdTipoAntecedentePsicologico:
+      Id:
         type: integer
         format: int64
       Nombre:
@@ -811,10 +824,13 @@ definitions:
         type: string
       Economicos:
         type: string
-      IdHojaHistoria:
+      HistoriaClinicaId:
         type: integer
         format: int64
-      IdValoracionInterpersonal:
+      HojaHistoriaId:
+        type: integer
+        format: int64
+      Id:
         type: integer
         format: int64
       Judiciales:
